[gd_scene load_steps=4 format=2]

[ext_resource path="res://elementos/imagem/enchente/chefao/chefaopÄºaceholder.jpg" type="Texture" id=1]
[ext_resource path="res://recursos/jogos/enchente/chefao/ChefaoScript.gd" type="Script" id=2]
[ext_resource path="res://elementos/imagem/enchente/chefao/ondadagua.png" type="Texture" id=3]

[node name="Chefao" type="Spatial"]
script = ExtResource( 2 )

[node name="OrigemObstaculos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25053, -12.2472 )

[node name="Faixas" type="Node" parent="."]

[node name="Faixa1" type="Position3D" parent="Faixas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 22.727 )

[node name="Faixa2" type="Position3D" parent="Faixas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 22.7269 )

[node name="Faixa3" type="Position3D" parent="Faixas"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 22.727 )

[node name="Timers" type="Node" parent="."]

[node name="TimerAtaque" type="Timer" parent="Timers"]
wait_time = 8.0
autostart = true

[node name="TimerModos" type="Timer" parent="Timers"]
wait_time = 25.0
autostart = true

[node name="Sprites" type="Node" parent="."]

[node name="Sprite3D2" type="Sprite3D" parent="Sprites"]
transform = Transform( -8.6244e-08, 1.97303, 0, -1.97303, -8.6244e-08, 0, 0, 0, 2.06394, 0.540444, 0.332619, -8.07998 )
axis = 0
texture = ExtResource( 3 )

[node name="SpriteChefao" type="Sprite3D" parent="Sprites"]
transform = Transform( -1.58598e-07, 3.62831, 0, -2.48635, -1.08682e-07, 0, 0, 0, 2.48635, 0.0693028, 3.02899, -7.62484 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Sprites/SpriteChefao"]

[connection signal="timeout" from="Timers/TimerAtaque" to="." method="_on_TimerAtaque_timeout"]
[connection signal="timeout" from="Timers/TimerModos" to="." method="_on_TimerModos_timeout"]
[connection signal="tween_completed" from="Sprites/SpriteChefao/Tween" to="." method="_on_Tween_tween_completed"]
